# test_android_dlopen

./: .bazelrc  README.md  WORKSPACE
app/: AndroidManifest.xml  BUILD.bazel  LibraryManifest.xml
app/cpp/: hello-stub.cc  native-lib.cc
app/java/com/example/android/: MainActivity.java
app/res/layout/: activity_main.xml
app/res/values/: strings.xml
lib/: BUILD  hello.cc  hello.h  version_script.lds
