load("@rules_cc//cc:defs.bzl", "cc_library")
load("@build_bazel_rules_android//android:rules.bzl", "android_binary", "android_library")

android_library(
    name = "lib",
    srcs = glob(["java/**/*.java"]),
    custom_package = "com.example.android",
    manifest = "LibraryManifest.xml",
    resource_files = glob(["res/**/*"]),
    deps = [
        ":jni_lib_using_stub",
        #":jni_lib",
    ],
)
# stubing libhello.so
cc_library(
    name = "hello_stub",
    srcs = ["cpp/hello-stub.cc"],
    linkopts = ["-llog"],
    deps = [
        "//lib:hello_header",
    ],
    alwayslink = 1,
)


cc_library(
    name = "jni_lib_using_stub",
    srcs = ["cpp/native-lib.cc"],
    linkopts = ["-llog"],
    deps = [
        ":hello_stub",
    ],
    alwayslink = 1,
)
# directly linking to libhello.so
cc_library(
    name = "jni_lib",
    srcs = ["cpp/native-lib.cc"],
    linkopts = ["-llog"],
    deps = [
        "//lib:hello",
    ],
    alwayslink = 1,
)


android_binary(
    name = "app",
    manifest = "AndroidManifest.xml",
    deps = [
        ":lib",
        "//lib:hello",
    ],
)
